# multiprompt

./: .gitignore  README.md  main.py  netlify.toml  package.json  requirements.txt  run_server.py  setup.py
app/: app.py  config.py  socket_routes.py
app/services/: llm_service.py  repo2llm.py
backend/: app.py  config.py  llm_service.py  repo2llm.py  routes.py  socket_routes.py  tasks.py
data/: agents.json
electron/: main.js  preload.js
frontend/: package.json  tailwind.config.js
frontend/src/: App.js  constants.js  index.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
multiprompt/: __init__.py  agents.py  cli.py  conversations.py  db.py  imports.py  llm_service.py  llms.py  messages.py  multiprompt.py  prompts.py  repo2llm.py  server.py  types.py  utils.py  workflows.py
notebooks/: agents.ipynb  agents2.ipynb  morerhymes.ipynb  poem_completion_prompting3.ipynb  poem_completion_prompting4.ipynb  poem_completion_prompting_analysis.ipynb  poem_completion_prompting_analysis0.ipynb  querygendertransform-results.ipynb  querygendertransform.ipynb  reporeaders.ipynb  search_dolma_es_poems.ipynb  workflows.ipynb
src/: App.js  constants.js  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: embedded_server.rs  main.rs
src/components/: AgentCard.js  AgentConfigForm.js  ConfigModal.js  ConversationHistory.js  GridLayout.js  IconSidebar.js  Layout.js  Messages.css  Messages.js  ModalManager.js  PromptAppendix.js  PromptConfig.js  ToastContainer.js  UserCard.js  WorkflowModal.js
static/: consts.js  index.html  script.js  styles.css
(+79 files in other folders)
